--- a/kontakt.html
+++ b/kontakt.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/kontakt.css">
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <script src="main.js"></script>
 </head>
 <body>
