--- a/webpack/src/html/blocks/text-media.html
+++ b/webpack/src/html/blocks/text-media.html
@@ -2,7 +2,7 @@
     <a href="opis1.html">
         <div class="wrap">
             <div class="wakacje" id="w1">
-                <h2> Last Minute! </h2> 
+                <h2 class="wrap-h2"> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -14,7 +14,7 @@
     <a href="opis2.html">
         <div class="wrap">
             <div class="wakacje" id="w2">
-                <h2> Last Minute! </h2> 
+                <h2 class="wrap-h2"> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -26,7 +26,7 @@
     <a href="opis3.html">
         <div class="wrap">
             <div class="wakacje" id="w3">
-                <h2> Last Minute! </h2> 
+                <h2 class="wrap-h2"> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -38,7 +38,7 @@
     <a href="opis4.html">
         <div class="wrap">
             <div class="wakacje" id="w4">
-                <h2> Last Minute! </h2> 
+                <h2 class="wrap-h2"> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
