--- a/webpack/src/html/oferty.html
+++ b/webpack/src/html/oferty.html
@@ -1,70 +1,53 @@
 <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="pl">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="main.js"></script>
     <meta charset="UTF-8">
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <link rel="preconnect" href="https://use.typekit.net" crossorigin />
+    <link rel="preconnect" href="https://p.typekit.net/" crossorigin />
+    <link rel="preload" as="style" href="https://use.typekit.net/hrg2ner.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/hrg2ner.css" media="print" onload="this.media='all'" />
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= require('../assets/apple-touch-icon.png') %>">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= require('../assets/favicon-32x32.png') %>">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= require('../assets/favicon-16x16.png') %>">
+    <link rel="manifest" href="<%= require('../assets/site.webmanifest') %>">
+    <meta name='robots' content='<%= robots %>' />
 </head>
 <body>
-    <header class="header">
-        <div>
-            <a href="index.html"><img src="../../assets/img/samolot1.png" alt="logo" class="header-logo"></a>
-        </div>   
-        <div class="mobile-container">
-            <div class="topnav">
-                <ul class="header-menu">
-                    <li>
-                        <a href="./oferty.html" style="background-color: rgba(0, 0, 128, 0.918);
-                        border-radius: 5px;
-                        color: rgb(230, 186, 12);
-                        transition: background-color 2s;   ">Oferty</a>
-                    </li>
-                    <li>
-                        <a href="./kontakt.html">Kontakt</a>
-                    </li>
-                    <li>
-                        <a href="./logowanie.html">Zaloguj się</a>
-                    </li>
-                </ul>
-                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
-                </button>
-            </div>
-        </div>   
-    </header> 
-
+    <%= require('html-loader?{"sources":{"list":["...",{"tag":"img","attribute":"data-src","type":"src"}]}}!./partials/header.html').default %>
     <div class="container-oferty">
         <a href="opis1.html"> 
             <div class="oferta" id="o1">
             <div class="tekst">
-                <h2>Hotel Casa Blue Luxury Resort ***** 3899 zł /os.</h2>
+                <h2 class="oferty-h2">Hotel Casa Blue Luxury Resort ***** 3899 zł /os.</h2>
             </div>
             </div>
         </a>
        <a href="opis2.html">
             <div class="oferta" id="o2">
             <div class="tekst">
-                <h2>Hotel Fafa Premium ***** 1696 zł /os.</h2>
+                <h2 class="oferty-h2">Hotel Fafa Premium ***** 1696 zł /os.</h2>
             </div>
             </div>
         </a>      
         <a href="opis3.html">
             <div class="oferta" id="o3">
             <div class="tekst">
-                <h2>Hotel Summer Village of Hippocrates ***** 2559 zł /os.</h2>
+                <h2 class="oferty-h2">Hotel Summer Village of Hippocrates ***** 2559 zł /os.</h2>
             </div>
             </div> 
         </a>       
         <a href="opis4.html">
             <div class="oferta" id="o4">
             <div class="tekst">
-                <h2>Hilton Seychelles Labriz Resort Spa ***** 6823 zł /os.</h2>
+                <h2 class="oferty-h2">Hilton Seychelles Labriz Resort Spa ***** 6823 zł /os.</h2>
             </div>
             </div>
         </a>     
     </div>
-
-    <footer class="footer">   
-        <p>© Copyright TravelBag 2024</p>   
-    </footer>    
+    <%= require('html-loader?{"sources":{"list":["...",{"tag":"img","attribute":"data-src","type":"src"}]}}!./partials/footer.html').default %>
 </body>
 </html>
