podstrony, style, kod porządek i scss

--- a/oferty.html
+++ b/oferty.html
@@ -18,10 +18,7 @@
             <div class="topnav">
                 <ul class="header-menu">
                     <li>
-                        <a href="oferty.html" style="background-color: rgba(0, 0, 128, 0.918);
-                        border-radius: 5px;
-                        color: rgb(230, 186, 12);
-                        transition: background-color 2s;   ">Oferty</a>
+                        <a href="oferty.html" class="menu-color">Oferty</a>
                     </li>
                     <li>
                         <a href="kontakt.html">Kontakt</a>
