--- a/webpack/src/html/blocks/text-media.html
+++ b/webpack/src/html/blocks/text-media.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <a href="opis1.html">
+    <a href="../opis.html">
         <div class="wrap">
-            <div class="wakacje" id="w1">
-                <h2 class="wrap-h2"> Last Minute! </h2> 
+            <div class="block" id="w1">
+                <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -11,10 +11,10 @@
             </div>
         </div>
     </a>
-    <a href="opis2.html">
+    <a href="../opis.html">
         <div class="wrap">
-            <div class="wakacje" id="w2">
-                <h2 class="wrap-h2"> Last Minute! </h2> 
+            <div class="block" id="w2">
+                <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -23,10 +23,10 @@
             </div>
         </div>
     </a>  
-    <a href="opis3.html">
+    <a href="../opis.html">
         <div class="wrap">
-            <div class="wakacje" id="w3">
-                <h2 class="wrap-h2"> Last Minute! </h2> 
+            <div class="block" id="w3">
+                <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -35,10 +35,10 @@
             </div>
         </div>
     </a>     
-    <a href="opis4.html">
+    <a href="../opis.html">
         <div class="wrap">
-            <div class="wakacje" id="w4">
-                <h2 class="wrap-h2"> Last Minute! </h2> 
+            <div class="block" id="w4">
+                <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
@@ -46,5 +46,5 @@
                 <h5>1600 zł/os</h5>
             </div>
         </div>
-    </a>   
+    </a> 
 </div>
