--- a/webpack/src/html/oferty.html
+++ b/webpack/src/html/oferty.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
@@ -19,28 +18,28 @@
 <body>
     <%= require('html-loader?{"sources":{"list":["...",{"tag":"img","attribute":"data-src","type":"src"}]}}!./partials/header.html').default %>
     <div class="container-oferty">
-        <a href="opis1.html"> 
+        <a href="./opis.html"> 
             <div class="oferta" id="o1">
             <div class="tekst">
                 <h2 class="oferty-h2">Hotel Casa Blue Luxury Resort ***** 3899 zł /os.</h2>
             </div>
             </div>
         </a>
-       <a href="opis2.html">
+       <a href="./opis.html">
             <div class="oferta" id="o2">
             <div class="tekst">
                 <h2 class="oferty-h2">Hotel Fafa Premium ***** 1696 zł /os.</h2>
             </div>
             </div>
         </a>      
-        <a href="opis3.html">
+        <a href="./opis.html">
             <div class="oferta" id="o3">
             <div class="tekst">
                 <h2 class="oferty-h2">Hotel Summer Village of Hippocrates ***** 2559 zł /os.</h2>
             </div>
             </div> 
         </a>       
-        <a href="opis4.html">
+        <a href="./opis.html">
             <div class="oferta" id="o4">
             <div class="tekst">
                 <h2 class="oferty-h2">Hilton Seychelles Labriz Resort Spa ***** 6823 zł /os.</h2>
